master/docker-registry/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
  labels:
    app: docker-registry
spec:
  tls:
  - hosts:
    - ${DOCKER_REGISTRY_HOST}
    secretName: tls-docker-registry
  rules:
  - host: ${DOCKER_REGISTRY_HOST}
    http:
      paths:
      - path: /
        backend:
          serviceName: reg-docker-registry
          servicePort: 5000
